Overflow issue solved

--- a/Spotify/rightside.css
+++ b/Spotify/rightside.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     height: 99.2vh;
+    /* overflow-y: scroll; */
     overflow-y: scroll; 
     scrollbar-width: none;
     -ms-overflow-style: none;
@@ -22,7 +23,10 @@
     margin-top: 12px;
     margin-left: 10px;
     margin-right: 10px;
+    overflow-y: scroll; 
     border-radius: 5px;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
     /* border: 2px solid white; */
 }
 
